receiver/force-app/main/receiver/objects/Org_naming__mdt/Org_naming__mdt.object-meta.xml
<CustomObject>
    <description>Object to associate org id to its name</description>
    <label>Org naming</label>
    <pluralLabel>Org namings</pluralLabel>
</CustomObject>