receiver/force-app/main/receiver/objects/Org_naming__mdt/fields/Extract_visits_kpi__c.field-meta.xml
<CustomField>
    <fullName>Extract_visits_kpi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extract visits kpi</label>
    <type>Checkbox</type>
</CustomField>