receiver/force-app/main/receiver/objects/Org_naming__mdt/fields/Org_id__c.field-meta.xml
<CustomField>
    <fullName>Org_id__c</fullName>
    <description>The id used to associate an org with its corresponding name</description>
    <inlineHelpText>The id used to associate an org with its corresponding name</inlineHelpText>
    <label>Org id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>