receiver/force-app/main/receiver/objects/Org_naming__mdt/fields/Org_name__c.field-meta.xml
<CustomField>
    <fullName>Org_name__c</fullName>
    <description>The name which will be used when organization is saved</description>
    <inlineHelpText>The name which will be used when organization is saved</inlineHelpText>
    <label>Org name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>