receiver/force-app/main/receiver/objects/Org_naming__mdt/fields/Org_recordType__c.field-meta.xml
<CustomField>
    <fullName>Org_recordType__c</fullName>
    <description>Record type name to be associated to the record</description>
    <inlineHelpText>Record type name to be associated to the record</inlineHelpText>
    <label>Org record type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>